--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,9 @@
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
         
         <title>checkout</title>
-        
+
         <script 
-            src="app/lib/jquery-2.1.0.js"
-            type="text/javascript"></script>
-        <script 
-            src="app/lib/mustache.js"
-            type="text/javascript"></script>
-        <script 
-            src="app/main.js"
+            src="main.js"
             type="text/javascript"></script>
     </head>
 
